<resources>
    <string name="app_name">MOOC</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign up</string>
    <string name="demo_button">Demo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_child_button">Student</string>
    <string name="signup_parent_button">Parent</string>
    <string name="signup_question">Choose your account type</string>
    <string name="signupform_hintName">Name</string>
    <string name="signupform_hintSurname">Surname</string>
    <string name="signupform_hintEmail">Email address</string>
    <string name="signupform_hintPassword">Password</string>
    <string name="signupform_hintConfirmPassword">Confirm password</string>
    <string name="signupform_hintLink">Link</string>
    <string name="signupform_btnSubmit">Submit</string>
    <string name="signupform_btnAddLink">Add Child</string>
    <string name="signupform_btnRemoveLink">Remove Child</string>
    <string name="signupform_tvCY">Level</string>
    <string name="signupform_tvCourses">Courses</string>
    <string name="signupform_tvMode">Mode</string>
    <string name="signupform_invalidSignup">Invalid field!</string>
    <string name="popup_confCode">Confirmation code</string>
    <string name="popup_btn_confCode">Activate</string>
    <string name="popup_message">Enter the activation code</string>
    <string name="welcome_profile">Profile</string>
    <string name="welcome_courses">Courses</string>
    <string name="welcome_progression">Progression</string>
    <string name="welcome_welcome">Welcome</string>
    <string name="welcome_students">Students</string>
    <string-array name="currentYear_array">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
        <item>Seventh</item>
        <item>Eight</item>
        <item>Ninth</item>
        <item>Tenth</item>
        <item>Eleventh</item>
        <item>Twelfth</item>
    </string-array>
    <string-array name="nbCourses_array">
        <item>One</item>
        <item>Two</item>
        <item>All</item>
    </string-array>
    <string-array name="mode_array">
        <item>Progression</item>
        <item>Accompanied</item>
    </string-array>
    <string name="videos_button">Videos</string>
    <string name="documents_button">Documents</string>
    <string name="quizzes_button">Quizzes</string>
    <string name="grades_button">Grades</string>
    <string name="qcm_check_button">check</string>
    <string name="completedcontent_button">Completed Content</string>
    <string name="title_activity_student_list">StudentList</string>
    <string name="title_activity_student_menu">StudentMenu</string>
    <string name="title_activity_completed_content">CompletedContent</string>
    <string name="grade_profile">Grade:</string>
    <string name="type_profile">Account type:</string>
    <string name="parent_type_profile">Parent</string>
    <string name="student_type_profile">Student</string>
    <string name="camera_dialog_profile">Take a picture</string>
    <string name="gallery_dialog_profile">Choose from gallery</string>
    <string name="cancel_dialog_profile">Cancel</string>
    <string name="title_dialog_profile">Edit your profile picture</string>
    <string name="logout">Log Out</string>
</resources>
