<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/titleApp"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:fontFamily="@font/bellybetty"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="5sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5sp"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/login_button"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/signup_button"
        android:textSize="18sp" />

    <Button
        android:id="@+id/demo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/demo_button"
        android:textSize="18sp" />

</RelativeLayout>