<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_marginTop="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_marginTop="65dp"
        android:layout_width="227dp"
        android:layout_height="117dp"
        android:layout_below="@id/textViewWelcome"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_profile" />

    <Button
        android:id="@+id/btn_courses"
        android:layout_width="227dp"
        android:layout_height="117dp"
        android:layout_below="@id/btn_profile"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_courses" />

    <Button
        android:id="@+id/btn_students"
        android:layout_width="227dp"
        android:layout_height="117dp"
        android:layout_below="@id/btn_profile"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_students" />

    <Button
        android:id="@+id/btn_progression"
        android:layout_width="227dp"
        android:layout_height="117dp"
        android:layout_below="@+id/btn_courses"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_progression" />

</RelativeLayout>