<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_child"
        android:layout_width="223dp"
        android:layout_height="124dp"
        android:layout_above="@id/btn_parent"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_child_button" />

    <Button
        android:id="@+id/btn_parent"
        android:layout_width="223dp"
        android:layout_height="110dp"
        android:layout_centerInParent="true"
        android:text="@string/signup_parent_button" />

</RelativeLayout>