<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/signUpLinearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupform_hintSurname"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signupform_hintSurname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupform_hintName"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signupform_hintName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupform_hintEmail"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signupform_hintEmail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupform_hintPassword"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signupform_hintPassword"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupform_hintConfirmPassword"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signupform_hintConfirmPassword"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_addLink"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:text="@string/signupform_btnAddLink" />

            <Button
                android:id="@+id/btn_removeLink"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:text="@string/signupform_btnRemoveLink"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@+id/btn_addLink"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewCY"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/signupform_tvCY"
                android:layout_below="@+id/childConfirmPassword"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/currentYear"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@+id/childConfirmPassword"
                android:layout_toRightOf="@+id/textViewCY"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewNbCourses"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/signupform_tvCourses"
                android:layout_below="@+id/textViewCY"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/nbCourses"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@+id/currentYear"
                android:layout_toRightOf="@+id/textViewNbCourses"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewMode"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/signupform_tvMode"
                android:layout_below="@+id/textViewNbCourses"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/mode"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@+id/nbCourses"
                android:layout_toRightOf="@+id/textViewMode"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_gravity="center"
            android:layout_width="223dp"
            android:layout_height="60dp"
            android:text="@string/signupform_btnSubmit" />
    </LinearLayout>
</ScrollView>